--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -19,11 +22,14 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
-    <nav>
-      <span>tweeter</span>
+    <nav class = "navbar">
+      <span id = "title"><h1>Tweeter</h1></span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
+    <p>Where Birds Come to Chat!</p>
   </body>
 </html>
+
+<!-- npm run local -->
