--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
-    <p>Where Birds Come to Chat!</p>
+    <p>Enter your tweet</p>
   </body>
 </html>
 
