--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,20 @@
     <!-- Top nav bar (fixed) -->
     <nav class = "navbar">
       <span id = "title"><h1>Tweeter</h1></span>
+      <p>Enter your tweet</p>
     </nav>
-
+    
+    <header>
+      <div>
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+  </header>
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
-    <p>Enter your tweet</p>
   </body>
 </html>
 
