Fix issue with text placement on nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
     <!-- Top nav bar (fixed) -->
     <nav class = "navbar">
       <span id = "title"><h1>Tweeter</h1></span>
-      <p>Enter your tweet</p>
+      <span><h4><b>Write</b> A New Tweet</h4></span>
     </nav>
-    
+
     <header>
       <div>
           <img src="/images/profile-hex.png"> 
