--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
 
@@ -24,10 +25,9 @@
     <!-- Top nav bar (fixed) -->
     <nav class = "navbar">
       <span id = "title"><h1>Tweeter</h1></span>
-      <span><h4><b>Write</b> A New Tweet</h4></span>
+      <div><strong>Write</strong> A New Tweet</div>
     </nav>
-
-    <header>
+    <header class = "header">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
