--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -25,7 +26,7 @@
     <!-- Top nav bar (fixed) -->
     <nav class = "navbar">
       <span id = "title"><h1>Tweeter</h1></span>
-      <div><span id = "bold">Write</span> A New Tweet </div>
+      <div><b>Write</b> A New Tweet </div>
     </nav>
     <header class = "header">
       <div>
@@ -37,16 +38,14 @@
       </div>
   </header>
     <!-- Page-specific (main) content here -->
+    <!-- <span id= "compose-tweet"><h2>Compose Tweet</h2> </span> -->
     <main class="container">
-      <section class="new-tweet">
-        <h2>Compose Tweet</h2>
-        <form class= "form-inline" method= "POST" action= "/tweets"></form>
+         <section class="new-tweet"> 
+        <form class= "tweet-form" method= "POST" action= "/">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
-          <div>
-            <button type="submit">Tweet</button>
+            <button type="submit" class="button">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
-          </div>
         </form>
       </section>
       <p>Lorem Ipsum is the single greatest threat. We are not - we are not keeping up with other websites. Lorem Ipsum best not make any more threats to your website. It will be met with fire and fury like the world has never seen. Does everybody know that pig named Lorem Ipsum? An ‘extremely credible source’ has called my office and told me that Barack Obama’s placeholder text is a fraud.</p>
