--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,18 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    
+
+    <!-- Profile Pictures -->
+   
+
+    <!-- Icons -->
+    <script src="https://kit.fontawesome.com/4abed1c0a1.js" crossorigin="anonymous"></script>
+
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
@@ -25,11 +31,11 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
-    <nav class = "navbar">
-      <span id = "title"><h1>Tweeter</h1></span>
-      <div><b>Write</b> A New Tweet </div>
+    <nav class="navbar">
+      <span class="title"><h1>Tweeter</h1></span>
+      <div><span class="sparkle">Write</span> A New Tweet </div>
     </nav>
-    <header class = "header">
+    <header class="header">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
@@ -41,17 +47,55 @@
     <!-- Page-specific (main) content here -->
     <!-- <span id= "compose-tweet"><h2>Compose Tweet</h2> </span> -->
     <main class="container">
-         <section class="new-tweet"> 
+        <section class="new-tweet"> 
         <form class= "tweet-form" method= "POST" action= "/">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
             <button type="submit" class="button">Tweet</button>
-            <output name="counter" class="counter" id ="char-counter"for="tweet-text">140</output>
+            <output name="counter" class="counter" id="char-counter" for="tweet-text">140</output>
         </form>
       </section>
     </main>
-    <div class= "tweet-container">
-      <article class= "user-tweet"><div class= "profile">Whiskey Jack</div><div class= "user-name">@GreyHoodedWarbler</div>Stoked to be chosen as Canada's nataionl bird!<footer><label for="date">10 days ago</label><label for="icons">(icons here)</label></footer></article>
+
+    <div class="tweet-container">
+      <article class="user-tweet">
+        <img src="images/macaw.svg" alt="#">
+        <div class="profile">Scarlett Macaw</div>
+        <div class="user-name">@ScarlettTheMacaw</div>
+        <div class="tweet">Save the rainforest!</div>
+          <footer>
+            <div class="date">2 days ago</div>
+            <div class="icons">
+              <i class="fas fa-flag"></i><i class="fas fa-heart"></i><i class="fas fa-retweet"></i>
+            </div>
+          </footer>
+        </article>
+
+        <article class= "user-tweet">
+          <img src= "images/cockatoo.svg" alt="#">
+          <div class= "profile">Sulpher Crested Cockatoo</div>
+          <div class= "user-name">@PartyParrot</div>
+          <div class = "tweet">Happy Australia Day!</div>
+            <footer>
+              <div class ="date">5 days ago</div>
+              <div class ="icons">
+                <i class="fas fa-flag"></i><i class="fas fa-heart"></i><i class="fas fa-retweet"></i>
+              </div>
+            </footer>
+          </article>
+
+          <article class= "user-tweet">
+            <img src= "images/bird.svg" alt="#">
+            <div class= "profile">Whiskey Jack</div>
+            <div class= "user-name">@GreyJay</div>
+            <div class = "tweet">#Blessed to be named Canada's national bird.</div>
+              <footer>
+                <div class ="date">10 days ago</div>
+                <div class ="icons">
+                  <i class="fas fa-flag"></i><i class="fas fa-heart"></i><i class="fas fa-retweet"></i>
+                </div>
+              </footer>
+            </article>
     </div>
   </body>
 </html>
