Use ajax for form submission

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <!-- <span id= "compose-tweet"><h2>Compose Tweet</h2> </span> -->
     <main class="container">
         <section class="new-tweet"> 
-        <form class= "tweet-form" method= "POST" action= "/">
+        <form class= "tweet-form" method= "POST" action= "/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
             <button type="submit" class="button">Tweet</button>
