Clean up code, add comments

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,9 @@
     <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <!-- Profile Pictures -->
-   
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4abed1c0a1.js" crossorigin="anonymous"></script>
@@ -44,8 +42,8 @@
           <h2>Your Name</h2>
       </div>
   </header>
-    <!-- Page-specific (main) content here -->
-    <!-- <span id= "compose-tweet"><h2>Compose Tweet</h2> </span> -->
+
+<!-- New tweet submission form -->
     <main class="container">
         <section class="new-tweet"> 
         <form class= "tweet-form" method= "POST" action= "/tweets">
@@ -57,9 +55,9 @@
       </section>
     </main>
 
+    <!-- Previous tweets displayed on page -->
     <div class="tweet-container">
     </div>
   </body>
 </html>
 
-<!-- npm run local -->
