--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,17 @@
     <title>Tweeter - Home Page</title>
 
     <!-- Disable viewport zooming -->
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      type="text/css"
+    />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -16,51 +23,69 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- Icons -->
-    <script src="https://kit.fontawesome.com/4abed1c0a1.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/4abed1c0a1.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script
+      type="text/javascript"
+      src="/scripts/composer-char-counter.js"
+    ></script>
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav class="navbar">
-      <span class="title"><h1>Tweeter</h1></span>
-      <div><span class="sparkle">Write</span> A New Tweet </div>
+      <span class="title"><h1 class="tweeter-txt">Tweeter</h1></span>
+      <div class="write-txt"><span class="sparkle">Write</span> A New Tweet</div>
     </nav>
-    <header class="header">
-      <div>
-          <img src="/images/profile-hex.png"> 
-      </div>
-      <br>
-      <div>
-          <h2>Your Name</h2>
-      </div>
-  </header>
 
-<!-- New tweet submission form -->
-    <main class="container">
-        <section class="new-tweet"> 
-        <form class= "tweet-form" method= "POST" action= "/tweets">
-          <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
+    
+    <div class="responsive-container">
+      <!-- Mobile version -->
+      <header class="header">
+        <div>
+          <img src="/images/profile-hex.png" class="profile-img" />
+        </div>        
+        <div>
+          <h2 class="name">Your Name</h2>
+        </div>
+      </header>
+
+      <!-- New tweet submission form -->
+      <main class="container">
+        <section class="new-tweet">
+          <form class="tweet-form" method="POST" action="/tweets">
+            <label for="tweet-text">What are you humming about?</label>
+            <textarea name="text" id="tweet-text"></textarea>
             <button type="submit" class="button">Tweet</button>
-            <output name="counter" class="counter" id="char-counter" for="tweet-text">140</output>
-        </form>
-      </section>
-    </main>
+            <output
+              name="counter"
+              class="counter"
+              id="char-counter"
+              for="tweet-text"
+              >140</output>
+          </form>
+        </section>
 
-    <!-- Previous tweets displayed on page -->
-    <div class="tweet-container">
+        <!-- Previous tweets displayed on page -->
+        <div class="tweet-container"></div>
+      </main>
+
+      
     </div>
   </body>
 </html>
-
